# routes/customers.js
@@ -5,11 +5,23 @@ const customersController = require('../controllers/customers');
 const validation = require('../middleware/validate');
 const authenticate = require('../middleware/authenticate');
 
-router.get('/', customersController.getAll);
-router.get('/:id', customersController.getSingle);
+router.get('/',
+  // #swagger.tags = ['Customers']
+  // #swagger.summary = 'Get all customers'
+  customersController.getAll);
+
+router.get('/:id', 
+
+  // #swagger.tags = ['Customers']
+  // #swagger.summary = 'Get customer by id'
+
+  customersController.getSingle);
 
 router.post(
   '/',
+  // #swagger.tags = ['Customers']
+  // #swagger.summary = 'Create customer'
+
   authenticate,
   validation.saveCustomer,
   customersController.createCustomer
@@ -17,6 +29,8 @@ router.post(
 
 router.put(
   '/:id',
+  // #swagger.tags = ['Customers']
+  // #swagger.summary = 'Update customer'
   authenticate,
   validation.saveCustomer,
   customersController.updateCustomer
@@ -24,6 +38,8 @@ router.put(
 
 router.delete(
   '/:id',
+  // #swagger.tags = ['Customers']
+  // #swagger.summary = 'Delete customer'
   authenticate,
   customersController.deleteCustomer
 );
